feat(dev) 次数bug

--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -6,7 +6,7 @@
     "backgroundColor": "#963030",
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#963030",
-    "navigationBarTitleText": "心想视成",
+    "navigationBarTitleText": "AI心想视成",
     "navigationBarTextStyle": "black"
   },
   "permission": {
