--- a/cloudfunctions/xxsc/package.json
+++ b/cloudfunctions/xxsc/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "quickstartFunctions",
+  "name": "xxsc",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "wx-server-sdk": "~2.4.0"
+    "wx-server-sdk": "~3.0.1",
+    "axios": "^1.6.2"
   }
 }
