--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -14,6 +14,7 @@
   },
   "style": "v2",
   "sitemapLocation": "sitemap.json",
+  "lazyCodeLoading": "requiredComponents",
   "usingComponents": {
         "calendar": "@lspriv/wx-calendar"
   }
