--- a/miniprogram/package.json
+++ b/miniprogram/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@lspriv/wc-plugin-lunar": "^1.0.3-alpha.0",
-    "@lspriv/wx-calendar": "^1.8.4"
+    "@lspriv/wx-calendar": "^1.8.4",
+    "lottie-miniprogram": "^1.0.12"
   }
 }
